--- a/arch/arm/configs/cyanogenmod_d800_defconfig
+++ b/arch/arm/configs/cyanogenmod_d800_defconfig
@@ -3621,7 +3621,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
-CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_EXFAT_FS=y
 # CONFIG_EXFAT_DISCARD is not set
 # CONFIG_EXFAT_DELAYED_SYNC is not set
