--- a/arch/arm/configs/cyanogenmod_l01f_defconfig
+++ b/arch/arm/configs/cyanogenmod_l01f_defconfig
@@ -705,12 +705,12 @@ CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_MISC_FILESYSTEMS=y
 CONFIG_F2FS_FS=y
-# CONFIG_F2FS_STAT_FS is not set
+CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
-# CONFIG_F2FS_FS_POSIX_ACL is not set
+CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
-CONFIG_F2FS_FS_ENCRYPTION=y
+CONFIG_F2FS_CHECK_FS=y
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_CIFS=y
 CONFIG_NLS_CODEPAGE_437=y
