--- a/arch/arm/configs/cyanogenmod_f320_defconfig
+++ b/arch/arm/configs/cyanogenmod_f320_defconfig
@@ -1879,6 +1879,7 @@ CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 #
 # Diag Support
 #
+CONFIG_DIAG_CHAR=y
 
 #
 # DIAG traffic over USB
@@ -3075,7 +3076,7 @@ CONFIG_USB_DWC3_MSM=y
 # CONFIG_USB_G_SERIAL is not set
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
-# CONFIG_USB_G_ANDROID is not set
+CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_ACM_MS is not set
 # CONFIG_USB_G_MULTI is not set
@@ -3084,8 +3085,22 @@ CONFIG_USB_DWC3_MSM=y
 # CONFIG_USB_G_WEBCAM is not set
 CONFIG_USB_CSW_HACK=y
 # CONFIG_USB_MSC_PROFILING is not set
+CONFIG_MODEM_SUPPORT=y
+CONFIG_RMNET_SMD_CTL_CHANNEL=""
+CONFIG_RMNET_SMD_DATA_CHANNEL=""
+CONFIG_USB_G_LGE_ANDROID=y
+CONFIG_USB_G_LGE_ANDROID_PFSC=y
+CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="Android Platform"
+CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
+# CONFIG_USB_G_LGE_ANDROID_AUTORUN_VZW is not set
+CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
+# CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
+CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
+CONFIG_USB_G_LGE_ANDROID_NCM=y
+CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
 # CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
 # CONFIG_USB_G_LGE_MULTIPLE_CONFIGURATION is not set
+# CONFIG_USB_LGE_REPOSITION_FACTORY_BIND is not set
 
 #
 # OTG and related infrastructure
