--- a/arch/arm/configs/cyanogenmod_ls980_defconfig
+++ b/arch/arm/configs/cyanogenmod_ls980_defconfig
@@ -3498,7 +3498,11 @@ CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_LGE_B2B_VMWARE is not set
 # CONFIG_NTFS_FS is not set
-CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 
