--- a/arch/arm/configs/cyanogenmod_f320_defconfig
+++ b/arch/arm/configs/cyanogenmod_f320_defconfig
@@ -624,6 +624,7 @@ CONFIG_MSM_BOOT_STATS=y
 # CONFIG_MSM_XPU_ERR_FATAL is not set
 # CONFIG_MSM_CPR_REGULATOR is not set
 CONFIG_KRAIT_REGULATOR=y
+# CONFIG_KERNEL_TEXT_MPU_PROT is not set
 
 #
 # System MMU
@@ -2517,12 +2518,6 @@ CONFIG_BACKLIGHT_LM3630=y
 # CONFIG_BACKLIGHT_LM3697 is not set
 # CONFIG_BACKLIGHT_LM3631 is not set
 CONFIG_MACH_LGE_BACKLIGHT_SUPPORT=y
-
-#
-# Console display driver support
-#
-CONFIG_DUMMY_CONSOLE=y
-# CONFIG_FRAMEBUFFER_CONSOLE is not set
 # CONFIG_LOGO is not set
 # CONFIG_SLIMPORT_ANX7816 is not set
 CONFIG_SLIMPORT_DYNAMIC_HPD=y
@@ -2901,8 +2896,8 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MMC_SDHCI_PXAV3 is not set
 # CONFIG_MMC_SDHCI_PXAV2 is not set
-CONFIG_MMC_MSM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
 # CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT is not set
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
@@ -3083,7 +3078,6 @@ CONFIG_STAGING=y
 #
 # Speakup console speech
 #
-# CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_CLEARPAD_TM1217 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_STAGING is not set
 # CONFIG_STAGING_MEDIA is not set
@@ -3527,6 +3521,7 @@ CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
+CONFIG_CRYPTO_ABLK_HELPER=y
 # CONFIG_CRYPTO_USER is not set
 CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_GF128MUL=y
