--- a/arch/arm/configs/cyanogenmod_lgl22_defconfig
+++ b/arch/arm/configs/cyanogenmod_lgl22_defconfig
@@ -169,7 +169,6 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
-CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -516,7 +515,9 @@ CONFIG_MSM_IPC_ROUTER_SECURITY=y
 CONFIG_MSM_QMI_INTERFACE=y
 # CONFIG_MSM_TEST_QMI_CLIENT is not set
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=2265600
+CONFIG_MSM_CPU_FREQ_MIN=300000
 CONFIG_MSM_DEVFREQ_CPUBW=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -872,7 +873,6 @@ CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
 # CONFIG_NET_KEY is not set
-# CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -1324,7 +1324,6 @@ CONFIG_LGE_NFC_USE_PMIC=y
 # CONFIG_NFC_PN533 is not set
 CONFIG_NFC_QNCI=y
 CONFIG_LGE_NFC_SONY=y
-CONFIG_LGE_NFC_SONY_KDDI=y
 # CONFIG_CXD2235AGG_GJ_KDDI is not set
 # CONFIG_NFC_BCM2079X is not set
 # CONFIG_NFC_BCM43341 is not set
@@ -2097,7 +2096,6 @@ CONFIG_ADC_READY_CHECK_JB=y
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
 # CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO is not set
 CONFIG_LGE_PM_PWR_KEY_FOR_CHG_LOGO=y
-# CONFIG_SMB349_VZW_FAST_CHG is not set
 # CONFIG_WIRELESS_CHARGER is not set
 # CONFIG_FTT_CHARGER_V3 is not set
 CONFIG_MAX17048_FUELGAUGE=y
@@ -2113,8 +2111,6 @@ CONFIG_LGE_CURRENTNOW=y
 # CONFIG_CHARGER_UNIFIED_WLC_ALIGNMENT_BQ5102X is not set
 # CONFIG_LGE_PM_LLK_MODE is not set
 # CONFIG_LGE_SMART_CHARGING is not set
-# CONFIG_LGE_G2_EMBEDDED_BATT is not set
-# CONFIG_VZW_LLK is not set
 CONFIG_LGE_PM_BATTERY_BATT_ADC_G2_BASE=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO_V1_7=y
 CONFIG_HWMON=y
@@ -2228,9 +2224,6 @@ CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_BRICKED_THERMAL=y
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=2265600
-CONFIG_MSM_CPU_FREQ_MIN=300000
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -2328,247 +2321,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_MSM_GPIO is not set
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_QPNP=y
-CONFIG_MEDIA_SUPPORT=y
-
-#
-# Multimedia core support
-#
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_DEV=y
-CONFIG_VIDEO_V4L2_COMMON=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
-# CONFIG_DVB_CORE is not set
-CONFIG_VIDEO_MEDIA=y
-
-#
-# Multimedia drivers
-#
-CONFIG_RC_CORE=y
-CONFIG_LIRC=y
-# CONFIG_USER_RC_INPUT is not set
-# CONFIG_USER_SP_RC_INPUT is not set
-CONFIG_RC_MAP=y
-CONFIG_IR_NEC_DECODER=y
-CONFIG_IR_RC5_DECODER=y
-CONFIG_IR_RC6_DECODER=y
-CONFIG_IR_JVC_DECODER=y
-CONFIG_IR_SONY_DECODER=y
-CONFIG_IR_RC5_SZ_DECODER=y
-CONFIG_IR_SANYO_DECODER=y
-CONFIG_IR_MCE_KBD_DECODER=y
-CONFIG_IR_LIRC_CODEC=y
-# CONFIG_RC_ATI_REMOTE is not set
-# CONFIG_IR_IMON is not set
-# CONFIG_IR_MCEUSB is not set
-# CONFIG_IR_REDRAT3 is not set
-# CONFIG_IR_STREAMZAP is not set
-# CONFIG_RC_LOOPBACK is not set
-# CONFIG_IR_GPIO_CIR is not set
-
-#
-# Qualcomm MSM Camera And Video
-#
-# CONFIG_MSM_CAMERA is not set
-CONFIG_MSMB_CAMERA=y
-# CONFIG_MSMB_CAMERA_DEBUG is not set
-CONFIG_MSM_CAMERA_SENSOR=y
-# CONFIG_LG_OIS is not set
-# CONFIG_LG_PROXY is not set
-CONFIG_MSM_CPP=y
-CONFIG_MSM_CCI=y
-# CONFIG_MSM_CSI20_HEADER is not set
-# CONFIG_MSM_CSI22_HEADER is not set
-CONFIG_MSM_CSI30_HEADER=y
-CONFIG_MSM_CSIPHY=y
-CONFIG_MSM_CSID=y
-CONFIG_MSM_EEPROM=y
-CONFIG_MSM_ISPIF=y
-# CONFIG_MSM_ISPIF_V1 is not set
-# CONFIG_S5K3L2 is not set
-CONFIG_IMX135=y
-CONFIG_IMX132=y
-# CONFIG_IMX208 is not set
-# CONFIG_IMX119 is not set
-# CONFIG_IMX134 is not set
-# CONFIG_OV9724 is not set
-# CONFIG_HI256 is not set
-# CONFIG_OV5648 is not set
-# CONFIG_MT9M114 is not set
-# CONFIG_SP1628 is not set
-# CONFIG_GC0339 is not set
-# CONFIG_OV8825 is not set
-# CONFIG_OV8865 is not set
-# CONFIG_s5k4e1 is not set
-# CONFIG_OV12830 is not set
-# CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
-CONFIG_MSMB_JPEG=y
-# CONFIG_ZEE_CAMERA is not set
-# CONFIG_LGE_DUAL_LED is not set
-CONFIG_MSM_VIDC_V4L2=y
-CONFIG_MSM_WFD=y
-# CONFIG_MSM_WFD_DEBUG is not set
-# CONFIG_MSM_VCAP is not set
-CONFIG_MEDIA_TUNER=y
-# CONFIG_MEDIA_TUNER_CUSTOMISE is not set
-CONFIG_MEDIA_TUNER_SIMPLE=y
-CONFIG_MEDIA_TUNER_TDA8290=y
-CONFIG_MEDIA_TUNER_TDA827X=y
-CONFIG_MEDIA_TUNER_TDA18271=y
-CONFIG_MEDIA_TUNER_TDA9887=y
-CONFIG_MEDIA_TUNER_TEA5761=y
-CONFIG_MEDIA_TUNER_TEA5767=y
-CONFIG_MEDIA_TUNER_MT20XX=y
-CONFIG_MEDIA_TUNER_XC2028=y
-CONFIG_MEDIA_TUNER_XC5000=y
-CONFIG_MEDIA_TUNER_XC4000=y
-CONFIG_MEDIA_TUNER_MC44S803=y
-CONFIG_VIDEO_V4L2=y
-CONFIG_VIDEOBUF2_CORE=y
-CONFIG_VIDEOBUF2_MEMOPS=y
-CONFIG_VIDEOBUF2_DMA_CONTIG=y
-CONFIG_VIDEOBUF2_VMALLOC=y
-CONFIG_VIDEOBUF2_DMA_SG=y
-CONFIG_VIDEOBUF2_MSM_MEM=y
-CONFIG_VIDEO_CAPTURE_DRIVERS=y
-# CONFIG_VIDEO_ADV_DEBUG is not set
-# CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-# CONFIG_VIDEO_HELPER_CHIPS_AUTO is not set
-CONFIG_VIDEO_IR_I2C=y
-
-#
-# Encoders, decoders, sensors and other helper chips
-#
-
-#
-# Audio decoders, processors and mixers
-#
-# CONFIG_VIDEO_TVAUDIO is not set
-# CONFIG_VIDEO_TDA7432 is not set
-# CONFIG_VIDEO_TDA9840 is not set
-# CONFIG_VIDEO_TEA6415C is not set
-# CONFIG_VIDEO_TEA6420 is not set
-# CONFIG_VIDEO_MSP3400 is not set
-# CONFIG_VIDEO_CS5345 is not set
-# CONFIG_VIDEO_CS53L32A is not set
-# CONFIG_VIDEO_TLV320AIC23B is not set
-# CONFIG_VIDEO_WM8775 is not set
-# CONFIG_VIDEO_WM8739 is not set
-# CONFIG_VIDEO_VP27SMPX is not set
-
-#
-# RDS decoders
-#
-# CONFIG_VIDEO_SAA6588 is not set
-
-#
-# Video decoders
-#
-# CONFIG_VIDEO_ADV7180 is not set
-# CONFIG_VIDEO_ADV7183 is not set
-# CONFIG_VIDEO_BT819 is not set
-# CONFIG_VIDEO_BT856 is not set
-# CONFIG_VIDEO_BT866 is not set
-# CONFIG_VIDEO_KS0127 is not set
-# CONFIG_VIDEO_SAA7110 is not set
-# CONFIG_VIDEO_SAA711X is not set
-# CONFIG_VIDEO_SAA7191 is not set
-# CONFIG_VIDEO_TVP514X is not set
-# CONFIG_VIDEO_TVP5150 is not set
-# CONFIG_VIDEO_TVP7002 is not set
-# CONFIG_VIDEO_VPX3220 is not set
-
-#
-# Video and audio decoders
-#
-# CONFIG_VIDEO_SAA717X is not set
-# CONFIG_VIDEO_CX25840 is not set
-
-#
-# MPEG video encoders
-#
-# CONFIG_VIDEO_CX2341X is not set
-
-#
-# Video encoders
-#
-# CONFIG_VIDEO_SAA7127 is not set
-# CONFIG_VIDEO_SAA7185 is not set
-# CONFIG_VIDEO_ADV7170 is not set
-# CONFIG_VIDEO_ADV7175 is not set
-# CONFIG_VIDEO_ADV7343 is not set
-# CONFIG_VIDEO_AK881X is not set
-
-#
-# Camera sensor devices
-#
-# CONFIG_VIDEO_OV7670 is not set
-# CONFIG_VIDEO_VS6624 is not set
-# CONFIG_VIDEO_MT9M032 is not set
-# CONFIG_VIDEO_MT9P031 is not set
-# CONFIG_VIDEO_MT9T001 is not set
-# CONFIG_VIDEO_MT9V011 is not set
-# CONFIG_VIDEO_MT9V032 is not set
-# CONFIG_VIDEO_TCM825X is not set
-# CONFIG_VIDEO_SR030PC30 is not set
-# CONFIG_VIDEO_NOON010PC30 is not set
-# CONFIG_VIDEO_M5MOLS is not set
-# CONFIG_VIDEO_S5K6AA is not set
-
-#
-# Flash devices
-#
-# CONFIG_VIDEO_ADP1653 is not set
-# CONFIG_VIDEO_AS3645A is not set
-
-#
-# Video improvement chips
-#
-# CONFIG_VIDEO_UPD64031A is not set
-# CONFIG_VIDEO_UPD64083 is not set
-
-#
-# Miscelaneous helper chips
-#
-# CONFIG_VIDEO_THS7303 is not set
-# CONFIG_VIDEO_M52790 is not set
-CONFIG_V4L_USB_DRIVERS=y
-CONFIG_USB_VIDEO_CLASS=y
-CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-# CONFIG_USB_GSPCA is not set
-# CONFIG_VIDEO_PVRUSB2 is not set
-# CONFIG_VIDEO_HDPVR is not set
-# CONFIG_VIDEO_EM28XX is not set
-# CONFIG_VIDEO_CX231XX is not set
-# CONFIG_VIDEO_TM6000 is not set
-# CONFIG_VIDEO_USBVISION is not set
-# CONFIG_USB_ET61X251 is not set
-# CONFIG_USB_SN9C102 is not set
-# CONFIG_USB_PWC is not set
-# CONFIG_VIDEO_CPIA2 is not set
-# CONFIG_USB_ZR364XX is not set
-# CONFIG_USB_STKWEBCAM is not set
-# CONFIG_USB_S2255 is not set
-CONFIG_V4L_PLATFORM_DRIVERS=y
-# CONFIG_SOC_CAMERA is not set
-# CONFIG_V4L_MEM2MEM_DRIVERS is not set
-CONFIG_RADIO_ADAPTERS=y
-# CONFIG_RADIO_SI470X is not set
-# CONFIG_USB_MR800 is not set
-# CONFIG_USB_DSBR is not set
-# CONFIG_I2C_SI4713 is not set
-# CONFIG_RADIO_SI4713 is not set
-# CONFIG_USB_KEENE is not set
-# CONFIG_RADIO_TEA5764 is not set
-# CONFIG_RADIO_SAA7706H is not set
-# CONFIG_RADIO_TEF6862 is not set
-# CONFIG_RADIO_WL1273 is not set
-
-#
-# Texas Instruments WL128x FM driver (ST based)
-#
-# CONFIG_RADIO_WL128X is not set
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=y
+# CONFIG_MEDIA_SUPPORT is not set
 
 #
 # Graphics support
@@ -3064,7 +2817,6 @@ CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
-# CONFIG_USB_G_WEBCAM is not set
 CONFIG_USB_CSW_HACK=y
 # CONFIG_USB_MSC_PROFILING is not set
 CONFIG_MODEM_SUPPORT=y
@@ -3101,7 +2853,6 @@ CONFIG_USB_MSM_OTG=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
-# CONFIG_MACH_MSM8974_EMMC_HW_RESET is not set
 # CONFIG_LGE_MMC_SD_USE_SDCC3 is not set
 CONFIG_LGE_MMC_BKOPS_ENABLE=y
 # CONFIG_LGE_MMC_RESET_IF_HANG is not set
@@ -3197,7 +2948,6 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 CONFIG_SWITCH_MAX1462X=y
-# CONFIG_SWITCH_MAX1462X_WA is not set
 # CONFIG_INPUT_MAX14688 is not set
 # CONFIG_LGE_HEADSET_MIC_NOISE_WA is not set
 CONFIG_LGE_HEADSET_INSERT_DELAY=y
@@ -3411,14 +3161,12 @@ CONFIG_MOBICORE_API=y
 #
 # LGE Broadcast Device Support
 #
-CONFIG_LGE_BROADCAST_ONESEG=y
 
 #
 # LGE Japanese Mobile Broadcast(ISDB-T 1seg/ISDB-Tmm 13seg) Device Support
 #
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
-CONFIG_LGE_BROADCAST_ONESEG_FC8150=y
 
 #
 # LGE Felica selection
@@ -3452,6 +3200,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
